fix border color in dark mode

--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -4,12 +4,14 @@
   --paragraph-mb: 1.5rem;
   --text-color: #333;
   --background-color: #fff;
+  --border-color: rgba(0,0,0,0.1);
   color-scheme: light dark;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
       --background-color: #222;
+      --border-color: rgba(255,255,255,0.3);
       --text-color: #eee;
   }
 }
@@ -137,6 +139,10 @@ a.pill {
       width: calc(50% - 20px);
     }
   }
+}
+
+.post-group--title {
+  border-color: var(--border-color);
 }
 
 .date {
